# KratosElementTestSuite

./: CONVERSION_COMPLETE.md  CUSTOMTKINTER_MIGRATION.md  KIVY_CONVERSION_NOTES.md  LICENSE  MANIFEST.in  README.md  README_KIVY.md  main.py  pyproject.toml
.github/workflows/: windows_tests.yml  workflow.yml
experiment_frameworks/DearPyGui/: controller.py  model.py  view.py
experiment_frameworks/PySide/: controller.py  main.py  view.py
experiment_frameworks/kivy/: controller.py  main.py  model.py  view.py
experiment_frameworks/streamlit/: streamlit_app.py
experiment_frameworks/wxPython/: controller.py  main.py  model.py  view.py
kratos_element_test/: api_test.py  core_labels.py  generic_test_runner.py  kratos_element_test_gui.py  material_editor.py  mdpa_editor.py  plots.py  project_parameter_editor.py  run_simulation.py  test_helper.py  ui_builder.py  ui_labels.py  ui_menu.py  ui_runner.py  ui_udsm_parser.py
kratos_element_test/controller/: element_test_controller.py  material_input_controller.py  result_controller.py  soil_test_input_controller.py
kratos_element_test/core/: __init__.py  interfaces.py  models.py  utils.py
kratos_element_test/core/io/: gid_output_reader.py  material_editor.py  mdpa_editor.py  project_parameter_editor.py
kratos_element_test/core/pipeline/: __init__.py  generic_test_runner.py  result_collector.py  run_simulation.py
kratos_element_test/core/test/: output.post.msh  test_result_collector.py
kratos_element_test/model/: core_utils.py  main_model.py  material_input_data_models.py  material_input_data_utils.py  material_input_manager.py  material_inputs.py  models.py  result_manager.py  soil_test_input_manager.py
kratos_element_test/model/io/: gid_output_reader.py  lab_results_csv_parser.py  material_editor.py  mdpa_editor.py  project_parameter_editor.py  udsm_parser.py
kratos_element_test/model/pipeline/: generic_test_runner.py  result_collector.py  run_simulation.py
kratos_element_test/model/test/: output.post.res  output_undrained.post.res  test_core_utils.py  test_lab_results_csv_parser.py  test_main_model.py  test_material_input_data_utils.py  test_material_input_manager.py  test_result_collector.py  (+2 more)
kratos_element_test/plotters/: __init__.py  example_lab_results.py  lab_result_overlay_registry.py  lab_results.py  matplotlib_plotter.py  plotter_labels.py
kratos_element_test/ui/: controller.py  element_test_controller.py  kratos_element_test_gui.py  result_exporter.py  result_registry.py  ui_builder.py  ui_constants.py  ui_labels.py  ui_logger.py  ui_menu.py  ui_runner.py  ui_utils.py
kratos_element_test/view/: kratos_element_test_gui.py  log_frame.py  log_viewer.py  material_input_view.py  plot_frame.py  plot_viewer.py  result_exporter.py  result_registry.py  soil_parameter_entries.py  soil_test_input_view.py  ui_builder.py  ui_constants.py  ui_logger.py  ui_menu.py  ui_utils.py  widget_creation_utils.py
(+14 files in other folders)
