[tool.poetry]
name = "kratos_element_test"
version = "0.1.6"
description = "The Kratos Element Test Suite..."
authors = ["Deltares Geo Kratos Team <kratos@deltares.nl>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://github.com/Deltares-research/KratosElementTestSuite"
requires-python = ">=3.10"
# Use a list syntax:
include = ["kratos_element_test/assets/**", 
           "kratos_element_test/test_triaxial/**",
           "kratos_element_test/test_direct_shear/**"]
           
[tool.poetry.dependencies]
python = ">=3.10,<3.15"

matplotlib = "*"
pefile = "*"
platformdirs = "*"
Pillow = "*"
pandas = "*"
openpyxl = "*"
KratosGeoMechanicsApplication = ">=10.2.3"

[tool.poetry.scripts]
startElementTest = "kratos_element_test.ui.kratos_element_test_gui:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
